
syntax = "proto3";
package infoToAI;

option  java_multiple_files = true;
option  java_package = "infoToAI.grpc";

service  EchoService {
  rpc Echo(EchoRequest) returns (EchoReply);
  rpc GetRecipeIds(EchoRequest) returns (RecipeListId);
}

message EchoRequest {
  string text = 1;
}

message  EchoReply {
  string text = 1;
}

message RecipeListId {
  repeated string recipeIds = 1;
}